@@ -4075,14 +4075,14 @@ public final class DeviceState extends HarrierRule {
                         .findFirst();
 
         if (account.isPresent()) {
-            accounts(onUser).setFeatures(account.get(), Set.of(features));
+            accounts(onUser).setFeatures(account.get(), new HashSet<>(Arrays.asList(features)));
             mAccounts.put(key, account.get());
             TestApis.devicePolicy().calculateHasIncompatibleAccounts();
             return account.get();
         }
 
         AccountReference createdAccount = accounts(onUser).addAccount()
-                .features(Set.of(features))
+                .features(new HashSet<>(Arrays.asList(features)))
                 .add();
         mCreatedAccounts.add(createdAccount);
         mAccounts.put(key, createdAccount);
@@ -4250,7 +4250,7 @@ public final class DeviceState extends HarrierRule {
     private boolean trySetUserRestrictionWithDeviceOwner(String restriction) {
         ensureHasDeviceOwner(FailureMode.FAIL,
                 /* isPrimary= */ false, EnsureHasDeviceOwner.HeadlessDeviceOwnerType.NONE,
-                /* affiliationIds= */ Set.of(), /* type= */ DeviceOwnerType.DEFAULT,
+                /* affiliationIds= */ new HashSet<>(), /* type= */ DeviceOwnerType.DEFAULT,
                 EnsureHasDeviceOwner.DEFAULT_KEY, new TestAppProvider().query());
 
         RemotePolicyManager dpc = deviceOwner();
@@ -4269,7 +4269,7 @@ public final class DeviceState extends HarrierRule {
                                                           String restriction) {
         ensureHasProfileOwner(onUser,
                 /* isPrimary= */ false, /* isParentInstance= */ false,
-                /* affiliationIds= */ Set.of(), EnsureHasProfileOwnerKt.DEFAULT_KEY,
+                /* affiliationIds= */ new HashSet<>(), EnsureHasProfileOwnerKt.DEFAULT_KEY,
                 new TestAppProvider().query());
 
         RemotePolicyManager dpc = profileOwner(onUser);
@@ -4287,7 +4287,7 @@ public final class DeviceState extends HarrierRule {
     private boolean tryClearUserRestrictionWithDeviceOwner(String restriction) {
         ensureHasDeviceOwner(FailureMode.FAIL,
                 /* isPrimary= */ false, EnsureHasDeviceOwner.HeadlessDeviceOwnerType.NONE,
-                /* affiliationIds= */ Set.of(), /* type= */ DeviceOwnerType.DEFAULT,
+                /* affiliationIds= */ new HashSet<>(), /* type= */ DeviceOwnerType.DEFAULT,
                 EnsureHasDeviceOwner.DEFAULT_KEY, new TestAppProvider().query());
 
         RemotePolicyManager dpc = deviceOwner();
@@ -4306,7 +4306,7 @@ public final class DeviceState extends HarrierRule {
                                                             String restriction) {
         ensureHasProfileOwner(onUser,
                 /* isPrimary= */ false, /* isParentInstance= */ false,
-                /* affiliationIds= */ Set.of(), EnsureHasProfileOwnerKt.DEFAULT_KEY,
+                /* affiliationIds= */ new HashSet<>(), EnsureHasProfileOwnerKt.DEFAULT_KEY,
                 new TestAppProvider().query());
 
         RemotePolicyManager dpc = profileOwner(onUser);
